--- a/views/home/ubicacion.ejs
+++ b/views/home/ubicacion.ejs
@@ -40,9 +40,9 @@
 </main>
     <footer class="footer">
         <div class="containerFooter">
-            <img src="resources/img/logoIFAA(@).png" alt="logoIFAA">
-            <img src="resources/img/logoWIAC2025.png" alt="logoWIAC">
-            <img src="resources/img/logoaata.png" alt="logoAATA">
+            <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
+            <img src="/resources/img/logoWIAC2025.png" alt="logoWIAC">
+            <img src="/resources/img/logoaata.png" alt="logoAATA">
             <a href="/tyc" class="tycFooter">Terms & conditions</a>
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
             <a class="aFooter" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
