--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -135,8 +135,7 @@
             </select>
             <br>
             <label for="text">Message</label>
-                    <textarea  type="text" name="Text" rows="5" cols="72" value="<%= user.Text%>""><%= user.Text %>
-                    </textarea>  
+                    <textarea  class="form-control form-control-sm" type="text" name="Text" rows="5" cols="72" value="<%= user.Text%>""><%= user.Text %></textarea>  
             <div class="containerEditBtn">
                 <button class="btn btn-primary btn-lg" type="submit">Editar</button>
                 <a class="btn btn-danger btn-lg" href="/admin/form">Cancelar</a>
