--- a/public/css/timer.css
+++ b/public/css/timer.css
@@ -7,7 +7,7 @@
 .timer{
     width: 100%;
     height: 30rem;
-    background-image: url("/resources/img/fondodemensaje.jpeg");
+    background-image: url("/resources/img/fondodemensaje.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     margin: auto;
@@ -20,7 +20,7 @@
     padding: 1rem 0;
 }
 .fecha{
-    font-size: 6rem;
+    font-size: 8rem;
     font-weight: 400;
     color:  #008080;
     text-shadow: 2px 2px 2px #fff;
@@ -37,7 +37,7 @@
     text-align: center;
 }
 .grande{
-    font-size:7rem;
+    font-size:8rem;
     font-weight: 400;
     margin-left: 2rem;
 }
