--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resources/css/loader.css">
     <link rel="stylesheet" href="resources/css/styles.css">
     <link rel="stylesheet" href="resources/css/timer.css">
     <link rel="shortcut icon" href="/resources/img/LogoWIAC2025.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <script src="resources/js/loader.js"></script>
     <title>Home | WIAC 2025</title>
 </head>
 <body>
@@ -29,11 +31,11 @@
     </header>
     <main class="homeMain">
         <div class="bannerHome">
-            <img src="resources/img/banner.webp" alt="Torneo de arqueria">
-            <p class="hometoptext">Welcome to the</p>
+            <img src="resources/img/blurBannerWIAC.webp" alt="Torneo de arqueria">
+            <!-- <p class="hometoptext">Welcome to the</p>
             <h1 class="title titleMain">WIAC Word Indoor Archery Championship 2025</h1>
             <p class="datepara">October-06-2025 |</p>
-            <p class="locationpara">Buenos Aires | Argentina</p>
+            <p class="locationpara">Buenos Aires | Argentina</p> -->
         </div>
         <div class="containerMain">
             <img src="resources/img/LogoWIAC2025.png" alt="logoWIAC2025">
@@ -206,6 +208,7 @@
         </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
+    <div class="loader"></div>
     <script src="resources/js/timer.js"></script>
     <script src="resources/js/schlMenu.js"></script>
 </body>
