--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resources/css/loader.css">
     <link rel="stylesheet" href="/resources/css/styles.css">
     <link rel="shortcut icon" href="/resources/img/LogoWIAC2025.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://sdk.mercadopago.com/js/v2"></script>
     <link rel="stylesheet" href="resources/css/styles.css">
+    <script src="resources/js/loader.js"></script>
     <title>Inscription | WIAC 2025</title>
     
 
@@ -211,5 +213,6 @@
     </div>
     <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
 </footer>
+<div class="loader"></div>
 </body>
 </html>
