--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resources/css/loader.css">
     <link rel="stylesheet" href="/resources/css/styles.css">
     <link rel="shortcut icon" href="/resources/img/LogoWIAC2025.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="resources/js/loader.js"></script>
     <title>Schedule|WIAC 2025</title>
 </head>
 
@@ -160,6 +160,7 @@
         </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
+    <div class="loader"></div>
 </body>
 
 </html>
