--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resources/css/loader.css">
     <link rel="stylesheet" href="resources/css/styles.css">
     <link rel="shortcut icon" href="/resources/img/LogoWIAC2025.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <script src="resources/js/loader.js"></script>
     <title>Participants | WIAC 2025</title>
 </head>
 <body>
@@ -49,5 +51,6 @@
         </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
+    <div class="loader"></div>
 </body>
 </html>
