--- a/views/home/registersucess.ejs
+++ b/views/home/registersucess.ejs
@@ -3,11 +3,13 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="resources/css/loader.css">
         <link rel="stylesheet" href="/resources/css/styles.css">
         <link rel="shortcut icon" href="/resources/img/LogoWIAC2025.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+        <script src="resources/js/loader.js"></script>
         <title>Success | WIAC 2025</title>
 </head>
 <body>
@@ -22,12 +24,13 @@
         </div>
 
 
-    
+        <div class="loader"></div>
         <script>
             setTimeout(function(){
                 window.location.href = "/";
             }, 10000); 
         </script>
+        
     </main>
 </body>
 </html>
