--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -31,11 +31,11 @@
     </header>
     <main class="homeMain">
         <div class="bannerHome">
-            <img src="resources/img/blurBannerWIAC.webp" alt="Torneo de arqueria">
-            <!-- <p class="hometoptext">Welcome to the</p>
+            <img src="resources/img/bannerWIAC.jpg" alt="Torneo de arqueria">
+            <p class="hometoptext">Welcome to the</p>
             <h1 class="title titleMain">WIAC Word Indoor Archery Championship 2025</h1>
-            <p class="datepara">October-06-2025 |</p>
-            <p class="locationpara">Buenos Aires | Argentina</p> -->
+            <p class="datepara">October-08-2025 |</p>
+            <p class="locationpara">Buenos Aires | Argentina</p>
         </div>
         <div class="containerMain">
             <img src="resources/img/LogoWIAC2025.png" alt="logoWIAC2025">
@@ -44,7 +44,7 @@
                 <br>
                 <p>
                     Dear archers and fans of archery,
-                    We are very pleased to invite you to the WIAC 2025 World Archery Championships, organized by the Argentine Archery Association. <br> The event will take place from October-06-2025 to October-12-2025 and will be held according to the rules and regulations of IFAA. The competition is open to members from all over the world, limited to 288 archers in good standing of member countries. The championship will take place at the majestic <strong>Polideportivo Municipal Colinas de Peralta Ramos</strong> . This place, known for its beautiful scenery and rich culture, will be the perfect setting for this world-class event. <br> Finally, on behalf of the Argentine Archery Association, the event’s Organizing Committee and all Argentine archers, we warmly welcome you to Argentina for the WIAC 2025 World Archery Championship. Sincerely,</p><br>
+                    We are very pleased to invite you to the WIAC 2025 World Archery Championships, organized by the Argentine Archery Association. <br> The event will take place from October-08-2025 to October-13-2025 and will be held according to the rules and regulations of IFAA. The competition is open to members from all over the world, limited to 288 archers in good standing of member countries. The championship will take place at the majestic <strong>Polideportivo Municipal Colinas de Peralta Ramos</strong> . This place, known for its beautiful scenery and rich culture, will be the perfect setting for this world-class event. <br> Finally, on behalf of the Argentine Archery Association, the event’s Organizing Committee and all Argentine archers, we warmly welcome you to Argentina for the WIAC 2025 World Archery Championship. Sincerely,</p><br>
                 <p class="pMsg"><strong>Gustavo Stancato</strong></p>
                 <p>Chairman of the Organising Committee for the WIAC 2025 World Archery Championships</p></div>
         </div>
@@ -83,15 +83,7 @@
             </div>
             <div class="schlR">
                 <div class="dropdown">
-                    <button class="daySchl">Monday 10-06-2025</button>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li>12hs - 18hs - Set up </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <button class="daySchl">Tuesday 10-07-2025</button>
+                    <button class="daySchl">Wednesday 10-08-2025</button>
                     <div class="dropdown-content">
                         <ul>
                             <li>8hs - 13hs - Registration and equipment inspection </li>
@@ -102,24 +94,14 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="daySchl">Wednesday 10-08-2025</button>
+                    <button class="daySchl">Thursday 10-09-2025</button>
                     <div class="dropdown-content">
                         <ul>
                             <li>8hs - 16hs - Registration and equipment inspection</li>
                             <li>8hs - 17hs - Practice range open </li>
                             <li>9hs - 12hs - 1st Round </li>
-                            <li>13hs - 16hs - 2nd Round</li>
-                            <li>17hs - 20hs - 3rd Round</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <button class="daySchl">Thursday 10-09-2025</button>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li>8hs - 13hs - Practice Range Open </li>
-                            <li>9hs - 12hs - 1st Round </li>
-                            <li>13hs - 16hs - 2nd Round</li>
+                            <li>12.30hs - 15.30hs - 2nd Round</li>
+                            <li>16hs - 19hs - 3rd Round</li>
                         </ul>
                     </div>
                 </div>
@@ -128,8 +110,10 @@
                     <div class="dropdown-content">
                         <ul>
                             <li>8hs - 13hs - Practice Range Open </li>
-                            <li>9hs - 12hs - 1st Round </li>
-                            <li>13hs - 16hs - 2nd Round</li>
+                            <li>8.30hs - 11hs - 1st Round </li>
+                            <li>11.30hs - 14hs - 2nd Round</li>
+                            <li>14.30hs - 17hs - 3rd Round</li>
+                            <li>17.30hs - 20hs - 4th Round</li>
                         </ul>
                     </div>
                 </div>
@@ -137,15 +121,28 @@
                     <button class="daySchl">Saturday 10-11-2025</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li>8hs - 17hs - Practice Range Open </li>
+                            <li>8hs - 13hs - Practice Range Open </li>
+                            <li>8.30hs - 11hs - 1st Round </li>
+                            <li>11.30hs - 14hs - 2nd Round</li>
+                            <li>14.30hs - 17hs - 3rd Round</li>
+                            <li>17.30hs - 20hs - 4rd Round</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="daySchl">Sunday 10-12-2025</button>
+                    <div class="dropdown-content">
+                        <ul>
+                            <li>8hs - 16hs - Registration and equipment inspection</li>
+                            <li>8hs - 17hs - Practice range open </li>
                             <li>9hs - 12hs - 1st Round </li>
-                            <li>13hs - 16hs - 2nd Round</li>
-                            <li>17hs - 20hs - 3rd Round</li>
+                            <li>12.30hs - 15.30hs - 2nd Round</li>
+                            <li>16hs - 19hs - 3rd Round</li>
                         </ul>
                     </div>
                     </div>
                     <div class="dropdown">
-                        <button class="daySchl">Sunday 10-12-2025</button>
+                        <button class="daySchl">Monday 10-13-2025</button>
                         <div class="dropdown-content">
                             <ul>
                                 <li>11hs - 15hs - Award Ceremony
@@ -160,7 +157,7 @@
         <div class="bookingContainer">
             <div class="bookingText">
                 <h2 class="subtitle">Book your space</h2>
-                <span><p>The torunament stars on Monday 6th of October 2025 until Saturday 12th of October 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
+                <span><p>The torunament stars on Wednesday 10-08-2025 until Saturday 12th of October 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
                 <span><p>The tournament takes place at Polideportivo Municipal Colinas de Peralta Ramos,Mar Del Plata, Buenos Aires, Argentina <br></p><a href="/ubicacion">SEE MORE</a></span>
             </div>
             <div class="booking">
@@ -176,7 +173,7 @@
             <div class="card earlyBird">
                 <span class="spanCard"></span>
                 <h3>Early Bird</h3>
-                <p class="cardUp">From October 7th 2024 to October 31th 2024</p>
+                <p class="cardUp">From November 1st 2024 to October 31th 2024</p>
                 <p class="precio Up">€150</p>
                 <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
                 <p class="precio Dw">€120</p>
