--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -190,7 +190,10 @@
                     <a class="btnInsc btnCnl" href="/">Cancel</a>
                 </div>
             </form>
-            <div id="wallet_container"></div>
+            <!-- <div id="wallet_container"></div> -->
+            <div id="payment-container" style="display: none;">
+                <a id="checkout-link" href="#" class="btn btn-primary btn-sipago">Loading pay button..</a>
+            </div>
         </div>
     
         <div class="needHelpContainer">
@@ -198,7 +201,7 @@
             onclick="window.location.href='mailto:aata.argentina.presidente@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
             </button>
         </div>
-        <script src="resources/js/mpCheckoutBtn.js"></script>
+        <script src="resources/js/SPButton.js"></script>
 </main>
 
 <footer class="footer">
