--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -35,108 +35,104 @@
         <h1 class="title">Schedule</h1>
         <div class="schedule">
             <div class="scheduleInfo">
-                <p>The event begins on Monday, August 6th, with the setup phase taking place between 12pm and 6pm, setting
-                    the stage for a week of intense competition and camaraderie.<br>
-                    Tuesday, August 7th marks the formal start, with equipment registration and inspection from 8:00am. to
+                <p>The event begins on Wednesday, August 8th with equipment registration and inspection from 8:00am. to
                     1:00 p.m. At the same time, the practice field will be opened for participants. At 1:00 p.m. the
                     captains' meeting will take place, where key details of the competition will be discussed. The day
                     will culminate with the March of Nations and the Opening Ceremony at 3:00 pm, a symbolic event that
                     will celebrate unity and the competitive spirit.<br>
-                    Wednesday, August 8th will be dedicated to the official competition. From 8:00 am to 8:00 pm,
+                    Thursday, August 9th will be dedicated to the official competition. From 8:00 am to 7:00 pm,
                     participants will have the opportunity to demonstrate their skills in the first three rounds, after
                     a new registration and practice period in the early hours of the day.<br>
-                    On Thursday, August 9th and Friday, August 10th, the open practice field and the first two rounds of the
-                    day will continue, from 8:00 am to 4:00 pm. During these days, competitors will seek to consolidate
-                    their positions to advance in the tournament.<br> Saturday, August 11th will be a crucial day, with
-                    the practice field open from 8:00am and three more rounds of competition that will last until 8:00
+                    On friday, August 10th and Saturday, August 11th, the open practice field and the four rounds of the
+                    day will continue, from 8:30 am to 5:30 pm. During these days, competitors will seek to consolidate
+                    their positions to advance in the tournament.<br> Saturday, August 12th will be a crucial day, with
+                    the practice field open from 8:00am and three more rounds of competition that will last until 7:00
                     pm., where the best athletes will seek to secure a place on the podium.<br>
-                    Finally, on Sunday, August 12th, the event will close with the Awards Ceremony, which will begin at
+                    Finally, on Monday, August 13th, the event will close with the Awards Ceremony, which will begin at
                     11:00am, followed by a banquet for the participants. The day will culminate with the Closing
                     Ceremony at 3:00 pm, ending a week of competition and celebrating the winners.</p>
             </div>
             <div class="scheduleDays">
                 <img src="/resources/img/scheduletarget.jpg" alt="">
                 <div class="day"><span>
-                        <h4>Monday</h4>
-                        <p>12hs-18hs</p>
-                    </span>
-                    <span>
-                        <h4>10-06-2025</h4>
-                        <p>Set up</p>
-                    </span>
-                </div>
-                <div class="day"><span>
-                        <h4>Tuesday</h4>
+                        <h4>Wednesday</h4>
                         <p>8hs-13hs</p>
                         <p>8hs-13hs</p>
                         <p>13hs-14hs</p>
                         <p>15hs-17hs</p>
                     </span><span>
-                        <h4>10-07-2025</h4>
-                        <p>Registration and equipment Inspection</p>
+                        <h4>10-08-2025</h4>
+                        <p>Registration and Equipment Inspection</p>
                         <p>Practice range open</p>
-                        <p>Captains Meeting</p>
-                        <p>The March of Nations & Opening Ceremony</p>
-                        </span>
-                </div>
+                        <p>Captains meeting</p>
+                        <p>The March of Nations & Opening ceremony</p>
+                    </span></div>
                 <div class="day"><span>
-                        <h4>Wednesday</h4>
+                        <h4>Thursday</h4>
                         <p>8hs-16hs</p>
                         <p>8hs-17hs</p>
                         <p>9hs-12hs</p>
-                        <p>13hs-16hs</p>
-                        <p>17hs-20hs</p>
+                        <p>12.30hs-15.30hs</p>
+                        <p>16hs-19hs</p>
                     </span><span>
-                        <h4>10-08-2025</h4>
-                        <p>Registration and Equipment Inspection</p>
+                        <h4>10-09-2025</h4>
+                        <p>Registration and equipment inspection</p>
                         <p>Practice range open</p>
                         <p>1st Round</p>
                         <p>2nd Round</p>
                         <p>3rd Round</p>
                     </span></div>
                 <div class="day"><span>
-                        <h4>Thursday</h4>
-                        <p>8hs-13hs</p>
-                        <p>9hs-12hs</p>
-                        <p>13hs-16hs</p>
-                    </span><span>
-                        <h4>10-09-2025</h4>
-                        <p>Practice Range Open</p>
-                        <p>1st Round</p>
-                        <p>2nd Round</p>
-                    </span></div>
-                <div class="day"><span>
                         <h4>Friday</h4>
                         <p>8hs-13hs</p>
-                        <p>9hs-12hs</p>
-                        <p>13hs-16hs</p>
+                        <p>8.30hs-11hs</p>
+                        <p>11.30hs-14hs</p>
+                        <p>14.30hs-17hs</p>
+                        <p>17.30hs-20hs</p>
                     </span><span>
                         <h4>10-10-2025</h4>
                         <p>Practice Range Open</p>
                         <p>1st Round</p>
                         <p>2nd Round</p>
+                        <p>3rd Round</p>
+                        <p>4th Round</p>
                     </span></div>
                 <div class="day"><span>
                         <h4>Saturday</h4>
-                        <p>8hs-17hs</p>
-                        <p>9hs-12hs</p>
-                        <p>13hs-16hs</p>
-                        <p>17hs-20hs</p>
+                        <p>8hs-13hs</p>
+                        <p>8.30hs-11hs</p>
+                        <p>11.30hs-14hs</p>
+                        <p>14.30hs-17hs</p>
+                        <p>17.30hs-20hs</p>
                     </span><span>
                         <h4>10-11-2025</h4>
                         <p>Practice Range Open</p>
                         <p>1st Round</p>
                         <p>2nd Round</p>
                         <p>3rd Round</p>
+                        <p>4th Round</p>
                     </span></div>
                 <div class="day"><span>
                         <h4>Sunday</h4>
-                        <p>11hs-15hs</p>
+                        <p>8hs-16hs</p>
+                        <p>8hs-17hs</p>
+                        <p>9hs-12hs</p>
+                        <p>12.30hs-15.30hs</p>
+                        <p>16hs-19hs</p>
                     </span><span>
                         <h4>10-12-2025</h4>
-                        <p>Award Ceremony</p>
-                        <p>Banquet</p>
-                        <p>Closing Ceremony</p>
+                        <p>Registration and equipment inspection</p>
+                        <p>Practice range open</p>
+                        <p>1st Round</p>
+                        <p>2nd Round</p>
+                        <p>3rd Round</p>
+                    </span></div>
+                    <div class="day"><span>
+                        <h4>Monday</h4>
+                        <p>11hs-15hs</p>
+                    </span><span>
+                        <h4>10-13-2025</h4>
+                        <p>Award Ceremony & Banquet Closing Ceremony</p>
                     </span></div>
             </div>
 
