--- a/views/home/tyc.ejs
+++ b/views/home/tyc.ejs
@@ -41,7 +41,7 @@
                     means you MUST be a member of an IFAA member Association at the moment of registration and at the
                     moment of Tournament.<br>
                     All registered archers must have recorded 2 (two) Indoor o Flint Indoor scores in their scorecards
-                    within the two years previous to the start of WFAC2024.<br>
+                    within the two years previous to the start of WIAC2025.<br>
                     All attending archers shall be in possession of the classification card. This classification card
                     shall be presented at the moment of registration, prior to bow inspection. Archers without a
                     classification card will NOT participate the tournament. This statement is according to the Book of
@@ -57,7 +57,7 @@
                     Registration and payment at WIAC Registration Desk.<br>
                     Fees for the Champion of Nations shall be 100€ each team.<br>
                     Registration and payment at WIAC Registration Desk<br>
-                    The list containing confirmed archers will be updated every DAY<br>
+                    The list containing confirmed archers will be updated every SUNDAY<br>
                     Registration shall close on April-30-2025 or earlier, if the number of registered archers reach 288.<br>
                     The final date to change style is April-30-2025.
                 </li>
@@ -79,7 +79,7 @@
                     <h4>Banquet and Award Ceremony</h4>
                     The award banquet will be hosted at the main tent area.<br> Tickets for the Banquet will be sold at
                     the registration desk with a price 30€.<br>
-                    Award ceremony to be held in the same venue on Sunday 12nd.
+                    Award ceremony to be held in the same venue on Monday 13th.
                 </li>
                 <li>
                     <h4>Transportation</h4>
