--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -31,7 +31,7 @@
     <main>
         <h1 class="title">Participants</h1>
         <div class="containerParticipants">
-            <iframe src="https://lookerstudio.google.com/embed/reporting/77e0ed9e-9a75-4540-9faf-64af1d343acb/page/687DE" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+            <iframe src="https://lookerstudio.google.com/embed/reporting/77e0ed9e-9a75-4540-9faf-64af1d343acb/page/687DE" frameborder="0" style="border:0" allowfullscreen ></iframe>
         </div>
         <div class="needHelpContainer">
             <button class="needHelpBtn btnHelp"
