--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -31,7 +31,8 @@
     <main>
         <h1 class="title">Participants</h1>
         <div class="containerParticipants">
-            <iframe src="https://lookerstudio.google.com/embed/reporting/77e0ed9e-9a75-4540-9faf-64af1d343acb/page/687DE" frameborder="0" style="border:0" allowfullscreen ></iframe>
+            <h2 class=""><Title>listado de participantes</Title></h2>
+            <a class="listadoPart" target="_blank" href="https://lookerstudio.google.com/reporting/77e0ed9e-9a75-4540-9faf-64af1d343acb">LISTADO</a>
         </div>
         <div class="needHelpContainer">
             <button class="needHelpBtn btnHelp"
