--- a/views/home/tyc.ejs
+++ b/views/home/tyc.ejs
@@ -49,7 +49,7 @@
                 </li>
                 <li>
                     <h4>Registry fees and dates</h4>
-                    Registration shall be open on October-7-2024.<br>
+                    Registration shall be open on November-1st-2024.<br>
                     Registration fees for individuals early bird shall be:<br>
                     Professionals, Seniors, Veterans, Adult and Young Adult: 150€
                     Juniors and Cubs: 120€<br>
@@ -58,17 +58,17 @@
                     Fees for the Champion of Nations shall be 100€ each team.<br>
                     Registration and payment at WIAC Registration Desk<br>
                     The list containing confirmed archers will be updated every SUNDAY<br>
-                    Registration shall close on April-30-2025 or earlier, if the number of registered archers reach 288.<br>
-                    The final date to change style is April-30-2025.
+                    Registration shall close on July-10th-2025 or earlier, if the number of registered archers reach 288.<br>
+                    The final date to change style is July-30th-2025.
                 </li>
                 <li>
                     <h4>Cancellation Policy</h4>
                     Reimbursement of registration fees in the case of a written cancellation.<br>
                     Send a request by email to aata.argentina.presidente@gmail.com. with subject REFUND WIAC 2025.<br>
-                    * Before Dicember-01-2025: 90% of entry fee<br>
-                    * Before March-01-2025: 50% of entry fee<br>
-                    * Before May-01-2025: 20% of entre fee<br>
-                    * No refund after February-29-2025<br>
+                    * Before January-01st-2025: 90% of entry fee<br>
+                    * Before March-01st-2025: 50% of entry fee<br>
+                    * Before July-30th-2025: 20% of entre fee<br>
+                    * No refund after August-1st-2025<br>
                     The above refund policy is only for registration fees and excludes accommodation.<br>
                     The WIAC 2025 Organizing Committee is NOT responsible for any type of reservations related to
                     accommodation.Please contact travel agency or hotel directly regarding the refund policy for
