--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -611,6 +611,20 @@ main{
     border: none;
 }
 
+.aceptTYC{
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: red;
+    margin: .5rem auto;
+    background-color: white;
+    color: #000;
+}
+.aceptTYC a{
+    color: #000;
+}
+
 
 .wallet_container{
     width: 15rem;
@@ -689,11 +703,26 @@ main{
 .containerParticipants{
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 }
 .containerParticipants iframe{
     width: 100%;
     height: 1200px;
+
 }
+.listadoPart{
+    text-decoration: none;
+    padding: .5rem 1rem;
+    background-color: #009900;
+    color: white;
+    margin: auto;
+    width: max-content;
+    align-self:center;
+}
+
 /* Pagina Schedule */
 
 .schedule{
