--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -34,7 +34,7 @@
             <img src="resources/img/bannerWIAC.jpg" alt="Torneo de arqueria">
             <p class="hometoptext">Welcome to the</p>
             <h1 class="title titleMain">WIAC Word Indoor Archery Championship 2025</h1>
-            <p class="datepara">October-08-2025 |</p>
+            <p class="datepara">October-08-2025 | Octuber-13-2025</p>
             <p class="locationpara">Buenos Aires | Argentina</p>
         </div>
         <div class="containerMain">
@@ -157,13 +157,13 @@
         <div class="bookingContainer">
             <div class="bookingText">
                 <h2 class="subtitle">Book your space</h2>
-                <span><p>The torunament stars on Wednesday 10-08-2025 until Saturday 12th of October 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
+                <span><p>The tournament stars on Wednesday 10-08-2025 until Saturday 12th of October 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
                 <span><p>The tournament takes place at Polideportivo Municipal Colinas de Peralta Ramos,Mar Del Plata, Buenos Aires, Argentina <br></p><a href="/ubicacion">SEE MORE</a></span>
             </div>
             <div class="booking">
                 <div class="card secondGroup">
                 <h3>SecondCall</h3>
-                <p class="cardUp">From November 1st 2024 to January 31th 2025</p>
+                <p class="cardUp">From January 1st 2025 to February 28th 2025</p>
                 <p class="precio Up">€170</p>
                 <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
                 <p class="precio Dw">€130</p>
@@ -173,7 +173,7 @@
             <div class="card earlyBird">
                 <span class="spanCard"></span>
                 <h3>Early Bird</h3>
-                <p class="cardUp">From November 1st 2024 to October 31th 2024</p>
+                <p class="cardUp">From November 1st 2024 to Diciembre 31th 2024</p>
                 <p class="precio Up">€150</p>
                 <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
                 <p class="precio Dw">€120</p>
@@ -183,7 +183,7 @@
             
             <div class="card lastCall">
                 <h3>Last call</h3>
-                <p class="cardUp">From February 1st 2025 to July 10th 2025</p>
+                <p class="cardUp">From Marzo 1st 2025 to July 10th 2025</p>
                 <p class="precio Up">€190</p>
                 <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
                 <p class="precio Dw">€140</p>
