--- a/views/home/ubicacion.ejs
+++ b/views/home/ubicacion.ejs
@@ -24,7 +24,7 @@
                         <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
                         <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                         <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>   
-                        <li><a class="linkNav" href="/tyc">TERMINS AND CONDITIONS</a></li>       
+                        <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>       
                     </ul>
         </nav>
     </header>
