--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -24,7 +24,8 @@
                         <li><a class="linkNav" href="/inscription">REGISTRATION</a></li>
                         <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
                         <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
-                        <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>   
+                        <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li> 
+                        <li><a class="linkNav" href="/turism">TURISM</a></li>  
                         <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>        
                     </ul>
         </nav>
@@ -157,7 +158,7 @@
         <div class="bookingContainer">
             <div class="bookingText">
                 <h2 class="subtitle">Book your space</h2>
-                <span><p>The tournament stars on Wednesday 10-08-2025 until Saturday 12th of October 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
+                <span><p>The tournament stars on Wednesday 08th of October-2025 until Monday 13th of October 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
                 <span><p>The tournament takes place at Polideportivo Municipal Colinas de Peralta Ramos,Mar Del Plata, Buenos Aires, Argentina <br></p><a href="/ubicacion">SEE MORE</a></span>
             </div>
             <div class="booking">
