--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -27,7 +27,8 @@
                     <li><a class="linkNav" href="/inscription">REGISTRATION</a></li>
                     <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
                     <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
-                    <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>   
+                    <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
+                    <li><a class="linkNav" href="/turism">TURISM</a></li>    
                     <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>            
                 </ul>
     </nav>
@@ -207,6 +208,7 @@
             onclick="window.location.href='mailto:aata.argentina.presidente@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
             </button>
         </div>
+        <script src="resources/js/tycValidate.js"></script>
         <script src="resources/js/SPButton.js"></script>
 </main>
 
