--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -27,6 +27,7 @@
                 <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
                 <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                 <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
+                <li><a class="linkNav" href="/turism">TURISM</a></li> 
                 <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>
             </ul>
         </nav>
@@ -35,20 +36,20 @@
         <h1 class="title">Schedule</h1>
         <div class="schedule">
             <div class="scheduleInfo">
-                <p>The event begins on Wednesday, August 8th with equipment registration and inspection from 8:00am. to
+                <p>The event begins on Wednesday, October 8th with equipment registration and inspection from 8:00am. to
                     1:00 p.m. At the same time, the practice field will be opened for participants. At 1:00 p.m. the
                     captains' meeting will take place, where key details of the competition will be discussed. The day
                     will culminate with the March of Nations and the Opening Ceremony at 3:00 pm, a symbolic event that
                     will celebrate unity and the competitive spirit.<br>
-                    Thursday, August 9th will be dedicated to the official competition. From 8:00 am to 7:00 pm,
+                    Thursday, October 9th will be dedicated to the official competition. From 8:00 am to 7:00 pm,
                     participants will have the opportunity to demonstrate their skills in the first three rounds, after
                     a new registration and practice period in the early hours of the day.<br>
-                    On friday, August 10th and Saturday, August 11th, the open practice field and the four rounds of the
+                    On friday, October 10th and Saturday, October 11th, the open practice field and the four rounds of the
                     day will continue, from 8:30 am to 5:30 pm. During these days, competitors will seek to consolidate
-                    their positions to advance in the tournament.<br> Saturday, August 12th will be a crucial day, with
+                    their positions to advance in the tournament.<br> Sunday, October 12th will be a crucial day, with
                     the practice field open from 8:00am and three more rounds of competition that will last until 7:00
                     pm., where the best athletes will seek to secure a place on the podium.<br>
-                    Finally, on Monday, August 13th, the event will close with the Awards Ceremony, which will begin at
+                    Finally, on Monday, October 13th, the event will close with the Awards Ceremony, which will begin at
                     11:00am, followed by a banquet for the participants. The day will culminate with the Closing
                     Ceremony at 3:00 pm, ending a week of competition and celebrating the winners.</p>
             </div>
