--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -23,7 +23,8 @@
                         <li><a class="linkNav" href="/inscription">REGISTRATION</a></li>
                         <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
                         <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
-                        <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>   
+                        <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
+                        <li><a class="linkNav" href="/turism">TURISM</a></li>    
                         <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>       
                     </ul>
         </nav>
@@ -31,8 +32,8 @@
     <main>
         <h1 class="title">Participants</h1>
         <div class="containerParticipants">
-            <h2 class=""><Title>listado de participantes</Title></h2>
-            <a class="listadoPart" target="_blank" href="https://lookerstudio.google.com/reporting/77e0ed9e-9a75-4540-9faf-64af1d343acb">LISTADO</a>
+            <h2 class=""><Title>list of participants</Title></h2>
+            <a class="listadoPart" target="_blank" href="https://lookerstudio.google.com/reporting/77e0ed9e-9a75-4540-9faf-64af1d343acb">LIST</a>
         </div>
         <div class="needHelpContainer">
             <button class="needHelpBtn btnHelp"
