--- a/views/home/turism.ejs
+++ b/views/home/turism.ejs
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="resources/js/loader.js"></script>
-    <title>Location | WIAC 2025</title>
+    <title>turism | WIAC 2025</title>
 </head>
 <body>
     <header class="header">
@@ -25,16 +25,14 @@
                         <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                         <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
                         <li><a class="linkNav" href="/turism">TURISM</a></li>    
-                        <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>       
+                        <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li> 
+                              
                     </ul>
         </nav>
     </header>
     <main class="ubicacionMain">
-        <h1 class="title">Location</h1>
-        <h2>The tournament takes place at Polideportivo Municipal Colinas de Peralta Ramos Mar del Plata</h2>
-        <div class="ubicacionContainer">
-            <iframe class="ubicacionIframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3141.7208907394815!2d-57.554490524077515!3d-38.0535893477826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dde1f71ee895%3A0x3d6622c9601f0c7f!2sPolideportivo%20Municipal%20Colinas%20de%20Peralta%20Ramos%20Mar%20del%20Plata!5e0!3m2!1ses!2sit!4v1728035121607!5m2!1ses!2sit" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        <h1 class="title">Turism</h1>
+        <p>This page is Under Construction</p>
     <div class="needHelpContainer">
         <button class="needHelpBtn btnHelp"
         onclick="window.location.href='mailto:aata.argentina.presidente@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
